--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -301,7 +301,7 @@
        "'hello world'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,11 +346,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "5 = entier = int\n",
+    "5.0 = décimal = float\n",
+    "\"5\" = str (string)\n",
+    "-5 = int\n",
+    "5/2 = float\n",
+    "5//2 = int\n",
+    "5 == 2 = bool  (est-ce que 5=2 )\n",
+    "5 = 2 = erreur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(5)\n",
+    "type(5.0)\n",
+    "type(\"5\")\n",
+    "type(-5)\n",
+    "type(5/2)\n",
+    "type(5//2)\n",
+    "type(5==2)\n",
+    "type(5=2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,11 +400,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "(5, 2) = tuple\n",
+    "{5, 2} = set\n",
+    "[5, 2] = list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type((5, 2))\n",
+    "type({5, 2})\n",
+    "type([5, 2])"
+   ]
   },
   {
    "cell_type": "markdown",
