--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -404,8 +404,8 @@
    "metadata": {},
    "source": [
     "(5, 2) = tuple\n",
-    "{5, 2} = set\n",
-    "[5, 2] = list"
+    "{5, 2} = set (ensemble de valeur)\n",
+    "[5, 2] = list (ordonné)"
    ]
   },
   {
@@ -441,12 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le type de x est <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "print(\"le type de x est\", type(x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -460,10 +471,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v = 149"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -476,12 +489,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "149 = 13 x 11 + 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = v // 11\n",
+    "print(v, \"=\", m, \"x 11 + 6\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -494,11 +518,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "= 10\n",
+    "= 9\n",
+    "= 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3 * (10 / 3)\n",
+    "3 * (10 // 3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -511,18 +558,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "oui, plus les mêmes règles opératoires"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "6. Affectez un nombre entier à une variable, puis écrivez une expression qui affiche `True` si la variable est paire et `False` sinon."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = 5\n",
+    "print( z % 2 == 0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -533,12 +598,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115792089237316195423570985008687907853269984665640564039457584007913129639936\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( 2 ** 256 )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -556,12 +631,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = str(a)\n",
+    "l = len(s)\n",
+    "print(s [l-1]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = str(a)\n",
+    "print(s[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 564039457584\n",
+    "print (a % 10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -572,12 +695,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = str(a)\n",
+    "print(s[-2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,7 +730,9 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "0.2 + 0.4 < 0.6"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -607,12 +743,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0.5\n",
+    "resultat = int(x * 2**30) / 2**30\n",
+    "print (resultat)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -622,12 +770,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09999999962747097\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0.1\n",
+    "resultat = int(x * 2**30) / 2**30\n",
+    "print (resultat)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "4. Pouvez-vous trouver d'autres valeurs de `x` pour lesquelles l'expression calculée redonne la valeur de `x`?\n",
     "\n",
     "**Note**: les nombres flottants que l'on manipule sont en fait une approximation de ces nombres. Pour plus de détails, vous pouvez consulter [cet article](https://docs.python.org/fr/3.8/tutorial/floatingpoint.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cela marche pour 0,5 ; 1 ..."
    ]
   },
   {
@@ -646,14 +820,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworld\n",
+      "worldhello\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'"
+    "b = 'world'\n",
+    "print(a+b)\n",
+    "print(b+a)"
    ]
   },
   {
@@ -666,6 +851,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "world hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello\"\n",
+    "b = 'world'\n",
+    "print(a+\" \"+b)\n",
+    "print(b+\" \"+a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -674,12 +880,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hellohellohello'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * 3\n",
+    "(a + b) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -705,11 +925,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "non"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -732,6 +952,13 @@
    "metadata": {},
    "source": [
     "7. Quelle est la signification de cette comparaison?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "chaine de comparaison"
    ]
   },
   {
@@ -767,15 +994,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -785,11 +1003,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = input(\"Tape quelque chose au clavier\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -800,12 +1018,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"Tape un nombreau clavier\")\n",
+    "n = int(s)\n",
+    "print(n * 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -816,12 +1046,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"Votre âge\")\n",
+    "age = int(s)\n",
+    "ageen2031 = 2031 - (2021 - age)\n",
+    "print (ageen2031)"
+   ]
   },
   {
    "cell_type": "markdown",
