--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -977,13 +977,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3232\n"
+     ]
+    }
+   ],
    "source": [
-    "a = \"32\""
+    "a = \"32\"\n",
+    "print(a * 2)"
    ]
   },
   {
@@ -991,6 +1000,26 @@
    "metadata": {},
    "source": [
     "2. Utilisez la fonction de conversion `int()` pour obtenir le résultat de la multiplication de nombres entiers (64 ici)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(a) * 2"
    ]
   },
   {
@@ -1002,11 +1031,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vous avez dit oui ?\n"
+     ]
+    }
+   ],
    "source": [
-    "s = input(\"Tape quelque chose au clavier\")"
+    "s = input(\"Tape quelque chose au clavier\")\n",
+    "print(\"vous avez dit\", s, \"?\")"
    ]
   },
   {
