--- a/cours/04_fonctions/04_fonctions.ipynb
+++ b/cours/04_fonctions/04_fonctions.ipynb
@@ -94,7 +94,26 @@
     "#pour comprendre ce que font des fonctions inconnus, utiliser help    \n",
     "#cela affiche le docstring de la fonction\n",
     "help(chr)  #transforme un code unicode de caractère en la chaine contenant ce caractère\n",
-    "help(ord)  #transforme une chaine contenant un caractère en un code unicode\n",
+    "help(ord)  #transforme une chaine contenant un caractère en un code unicode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(chr(97))\n",
+    "print(ord(\"a\"))\n",
+    "#chr est l'inverse de ord, chr retourne une chaîne de caractères à partir d'un unicode (nombre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "help(chiffre)"
    ]
   },
@@ -244,10 +263,32 @@
     "def incremente(x):\n",
     "    x +=  1\n",
     "    z = 2\n",
-    "\n",
     "incremente(2)\n",
-    "print(x)\n",
+    "print (x)\n",
     "#print(z)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pb car variables locales, print doit etre dans la fonction car x pas défini sinon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Que fait ce code si on l'exécute ?\n",
+    "def incremente(x):\n",
+    "    x +=  1\n",
+    "    z = 2\n",
+    "    print (x)\n",
+    "incremente(2)\n",
+    "\n",
+    "#print(z)"
    ]
   },
   {
@@ -324,16 +365,24 @@
     "    print(\"je ne serai jamais atteint\")\n",
     "    \n",
     "    \n",
-    "un()\n",
+    "un()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def cherche(x,l):\n",
     "    for elem in l:\n",
     "        1 / elem #erreur quand elem vaut 0\n",
     "        if(x == elem):\n",
     "            return 1\n",
-    "    return 0\n",
+    "    return 0 \n",
     "\n",
-    "cherche(10, [1,10,0]) #la valeur 0 n'est pas atteinte car on trouve 10 avant\n"
+    "cherche(10, [1,10,0]) #la valeur 0 n'est pas atteinte car on trouve 10 avant"
    ]
   },
   {
@@ -525,13 +574,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toto  a  1 ans et vit en  france\n",
+      "kurt  a  18 ans et vit en  allemagne\n",
+      "toto  a  77 ans et vit en  italie\n"
+     ]
+    }
+   ],
    "source": [
     "def ma_fonction(pays, age = 1, nom = \"toto\"):\n",
     "    print(nom,\" a \", age, \"ans et vit en \", pays)\n",
@@ -594,13 +653,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "g = lambda x: x*2  \n",
     "print(g(2))\n",
@@ -628,33 +695,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "print((lambda x: x*2)(3))\n",
     "\n",
     "list(map(lambda x: x*2,range(10)))#applique la fonction à chaque élément de range(10)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Diaporama",
+  "interpreter": {
+   "hash": "ae71230639ab4a4897a0a7d840b3da0aa7ae116a7420052ce92ef4319b712ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -667,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
