--- a/cours/06_listes/06_listes.ipynb
+++ b/cours/06_listes/06_listes.ipynb
@@ -329,8 +329,16 @@
    },
    "outputs": [],
    "source": [
-    "print(liste[2:6])\n",
     "print(liste[-8:-4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(liste[2:6])"
    ]
   },
   {
@@ -425,15 +433,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 19, 13, 7, 3]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "liste[::-2]\n",
+    "liste[::-2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "liste[::11]"
    ]
   },
@@ -500,13 +538,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "range(1, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "# Générer une liste d'entiers de 1 à 9\n",
     "print(list(range(1, 10)))\n",
@@ -526,13 +573,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 8, 12, 16, 20, 24, 28, 32, 36]\n"
+     ]
+    }
+   ],
    "source": [
     "m = int(input(\"Donner un entier\"))\n",
     "\n",
@@ -736,16 +791,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Paris', 'Lisbonne', 'Berlin', 'Madrid', 'Athènes', 'Zagreb', 'Rome']\n"
+     ]
+    }
+   ],
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\"]\n",
-    "capitales.insert(1,\"Lisbonne\")\n",
+    "capitales.insert(1, \"Lisbonne\")\n",
     "print(capitales)\n"
    ]
   },
@@ -899,13 +962,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "nombres = [1,3,3,6,2,5,7,2,3,4,3,2,3]\n",
     "print(nombres.count(3))\n",
@@ -928,13 +1000,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "liste = [1, 2, 3]\n",
     "liste2 = liste.append(4)\n",
@@ -956,13 +1037,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste = [4, 13, 42, 27, 31, 17, 21]"
+   ]
   },
   {
    "cell_type": "code",
@@ -997,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1089,13 +1168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 7, 14]\n"
+     ]
+    }
+   ],
    "source": [
     "L = [3, 5, 1, 7, 14, 2]\n",
     "L2 = sorted(L)\n",
@@ -1115,13 +1202,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 7, 14]\n",
+      "[14, 7, 5, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "L2 = sorted(L, reverse=False)\n",
     "print(L2)\n",
@@ -1271,13 +1367,6 @@
    "source": [
     "**Exercice :** Créer avec une seule instruction une liste qui contient la table de multiplication de *5*."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1490,13 +1579,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "nombres = [1, 3, 5, 7, 9, 11]\n",
     "print(3 in nombres)\n",
@@ -1517,13 +1616,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "4 not in nombres"
    ]
@@ -1611,13 +1721,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5]\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "L = [[1, 2, 3], [4, 5], [6, 7, 8, 9]]\n",
     "print(L[0])\n",
@@ -1704,13 +1824,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "m = 3\n",
     "n = 4\n",
@@ -1731,13 +1859,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1, 0], [0, 0, 1, 0], [0, 0, 1, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "L[0][2] = 1\n",
     "print(L)"
@@ -1769,13 +1905,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "m = 3\n",
     "n = 4\n",
@@ -1785,13 +1929,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "L[0][2] = 1\n",
     "print(L)"
@@ -1812,31 +1964,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 2 2\n",
+      "0 1 2 2\n",
+      "0 0 1 2\n",
+      "0 0 0 1\n"
+     ]
+    }
+   ],
    "source": [
     "L = [[0] * 4 for i in range(4)]\n",
     "for i in range(4) :\n",
     "    for j in range(4) :\n",
     "        if i == j :\n",
     "            L[i][j] = 1\n",
-    "        elif i < j :\n",
+    "        elif i < j :                               #i collones, j lignes\n",
     "            L[i][j] = 2\n",
     "            \n",
     "for i in L:\n",
@@ -1866,7 +2018,8 @@
    "source": [
     "L = [0] * 4\n",
     "for i in range(4) : # pour chaque ligne\n",
-    "    L[i] = [0] * i + [1] + [2] * (n - i - 1)\n",
+    "    L[i] = [0] * i + [1] + [2] * (4 - i - 1)\n",
+    "print(L)\n",
     "\n",
     "for i in L:\n",
     "    print(' '.join([str(j) for j in i]))"
@@ -2439,9 +2592,11 @@
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
+  "interpreter": {
+   "hash": "ae71230639ab4a4897a0a7d840b3da0aa7ae116a7420052ce92ef4319b712ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -2454,7 +2609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
