--- a/exercises/TD03_fonctions/03_fonctions.ipynb
+++ b/exercises/TD03_fonctions/03_fonctions.ipynb
@@ -41,15 +41,21 @@
     "\n",
     "def tempsEnSeconde(temps):\n",
     "    \"\"\" Renvoie la valeur en seconde de temps donné comme jour, heure, minute, seconde.\"\"\"\n",
-    "    pass\n",
+    "    return temps[2] * 60 + temps[1] * 3600 + temps[0] * 24 * 3600 + temps[3]\n",
     "\n",
     "temps = (3,23,1,34)\n",
     "print(type(temps))\n",
-    "print(tempsEnSeconde(temps))   \n",
+    "print(\"Le temps en seconde est de \", tempsEnSeconde(temps))   \n",
     "\n",
-    "def secondeEnTemps(seconde):\n",
+    "def secondeEnTemps(t):\n",
     "    \"\"\"Renvoie le temps (jour, heure, minute, seconde) qui correspond au nombre de seconde passé en argument\"\"\"\n",
-    "    pass\n",
+    "    seconde = t % 60\n",
+    "    t = t // 60\n",
+    "    minute = t % 60\n",
+    "    t = t // 60\n",
+    "    heure = t % 24\n",
+    "    jour = t // 24\n",
+    "    return (jour, heure, minute, seconde)\n",
     "    \n",
     "temps = secondeEnTemps(100000)\n",
     "print(temps[0],\"jours\",temps[1],\"heures\",temps[2],\"minutes\",temps[3],\"secondes\")"
@@ -70,11 +76,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fonction auxiliaire ici\n",
-    "\n",
     "def afficheTemps(temps):\n",
     "    pass\n",
+    "\n",
+    "afficheTemps((1,0,14,23)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fonction auxiliaire ici\n",
+    "def affiche(v, labele):\n",
+    "    if v > 1:\n",
+    "        print(v, labele + \"s\", end=\" \") \n",
+    "    elif v == 1:\n",
+    "        print(v, labele, end=\" \")\n",
     "    \n",
+    "def afficheTemps(temps):\n",
+    "    affiche(temps[0], \"jour\")\n",
+    "    affiche(temps[1], \"heure\")\n",
+    "    affiche(temps[2], \"minute\")\n",
+    "    affiche(temps[3], \"seconde\")\n",
+    "    print()\n",
+    " \n",
     "afficheTemps((1,0,14,23))    "
    ]
   },
@@ -97,8 +124,14 @@
    "outputs": [],
    "source": [
     "def demandeTemps():\n",
-    "    pass\n",
-    "\n",
+    "    while True:\n",
+    "        jour = int(input(\"jour ?\"))\n",
+    "        heure = int(input(\"heure ?\"))\n",
+    "        minute = int(input(\"minute ?\"))\n",
+    "        seconde = int(input(\"seconde ?\"))\n",
+    "        if heure > 24 or minute > 60 or seconde > 60:\n",
+    "            continue #il redemande le jour  \n",
+    "        return jour, heure, minute, seconde\n",
     "afficheTemps(demandeTemps())"
    ]
   },
@@ -117,9 +150,11 @@
    "outputs": [],
    "source": [
     "def sommeTemps(temps1,temps2):\n",
-    "    pass\n",
-    "\n",
-    "sommeTemps((2,3,4,25),(5,22,57,1))"
+    "    t1 = tempsEnSeconde(temps1)\n",
+    "    t2 = tempsEnSeconde(temps2)\n",
+    "    return secondeEnTemps(t1 + t2)\n",
+    "resultat = sommeTemps((2,3,4,25),(5,22,57,1))\n",
+    "print(resultat)"
    ]
   },
   {
@@ -139,8 +174,10 @@
    "outputs": [],
    "source": [
     "def proportionTemps(temps,proportion):\n",
-    "    pass\n",
-    "afficheTemps(proportionTemps((2,0,36,0),0.2))\n",
+    "      t3 = tempsEnSeconde(temps)\n",
+    "      return secondeenTemps(int(t3 * proportion))\n",
+    "resultat = afficheTemps(proportionTemps((2,0,36,0),0.2))\n",
+    "print(resultat)\n",
     "#appeler la fonction en échangeant l'ordre des arguments"
    ]
   },
@@ -163,11 +200,19 @@
    "outputs": [],
    "source": [
     "def tempsEnDate(temps):\n",
-    "    pass\n",
+    "    jour, heure, minute, seconde = temps\n",
+    "    année = 1970 + jour // 365 \n",
+    "    jour %= 365\n",
+    "    return (année, jour, heure, minute, seconde)\n",
     "\n",
-    "def afficheDate(date = -1):\n",
-    "    pass\n",
-    "    \n",
+    "def afficheDate(date = -1):    #-1 est une valeur par défaut #date a 5 valeurs année, jour, heure, minute, seconde\n",
+    "    affiche(date[0], \"année\")\n",
+    "    afficheTemps(date[1:])     #intervalle des uplets qui commence à 1 et va jusqu'à la fin (jour, h, m, s) car date attend un quadruplet\n",
+    "    # ou bien\n",
+    "    # année, jour, heure, minute, seconde = date\n",
+    "    # temps = (jour, heure, minute, seconde)\n",
+    "    # afficheTemps(temps)\n",
+    "\n",
     "temps = secondeEnTemps(1000000000)\n",
     "afficheTemps(temps)\n",
     "afficheDate(tempsEnDate(temps))\n",
@@ -191,7 +236,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tester ici les fonctions de la librairie time"
+    "#tester ici les fonctions de la librairie time\n",
+    "import time \n",
+    "temps_secondes = int(time.time())\n",
+    "temps4 = secondeEnTemps(temps_secondes)\n",
+    "temps5 = tempsEnDate(temps4)\n",
+    "afficheDate(temps5)\n",
+    "\n",
+    "# afficheDate(tempsEnDate(secondeEnTemps(int(time.time()))))"
    ]
   },
   {
@@ -209,7 +261,14 @@
    "outputs": [],
    "source": [
     "def bisextile(jour):\n",
-    "    pass\n",
+    "    année = 1970\n",
+    "    while jour > 0:\n",
+    "        if année % 4 == 0 and année % 100 != 0 and année % 400 != 0:\n",
+    "            jour -= 366\n",
+    "            print(\"l'année est bisextile\", année)\n",
+    "        else:\n",
+    "            jour -= 365\n",
+    "        année += 1\n",
     "        \n",
     "bisextile(20000)"
    ]
@@ -228,14 +287,33 @@
    "outputs": [],
    "source": [
     "def nombreBisextile(jour):\n",
-    "    pass\n",
+    "    année = 1970\n",
+    "    b = 0\n",
+    "    while jour > 0:\n",
+    "        if année % 4 == 0 and année % 100 != 0 and année % 400 != 0:\n",
+    "            jour -= 366\n",
+    "            b += 1\n",
+    "        else:\n",
+    "            jour -= 365\n",
+    "        année += 1\n",
+    "    return b \n",
     "\n",
     "def tempsEnDateBisextile(temps):\n",
-    "    pass\n",
+    "    return tempsEnDate((jour - nombreBisextile(jour), heure, minute, seconde)) \n",
     "   \n",
     "temps = secondeEnTemps(1000000000)\n",
     "afficheTemps(temps)\n",
     "afficheDate(tempsEnDateBisextile(temps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rien à voir\n",
+    "list(range(1, 11, 3))"
    ]
   },
   {
@@ -273,8 +351,16 @@
    "outputs": [],
    "source": [
     "def verifie(liste_temps):\n",
-    "    pass\n",
-    "\n",
+    "    temps48h = [0, 48, 0, 0]\n",
+    "    temps48hsecondes = tempsEnSeconde(temps48h)\n",
+    "    sommetemps = 0\n",
+    "    for temps in liste_temps:\n",
+    "        if tempsEnSeconde(temps) > temps48hsecondes:\n",
+    "            return False\n",
+    "        else: \n",
+    "            sommetemps += tempsEnSeconde(temps)\n",
+    "    return sommetemps < tempsEnSeconde((0, 140, 0, 0))\n",
+    "        \n",
     "\n",
     "liste_temps = [[1,2,39,34],[0,1,9,4],[0,29,39,51],[0,31,13,46]]\n",
     "verifie(liste_temps)"
@@ -282,21 +368,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'b' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-367e618768f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#b = calculs(3,4)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'b' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "a = [[1,2,39,34],[0,1,9,4],[0,29,39,51],[0,31,13,46]]\n",
+    "print(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a = 2\n",
     "\n",
@@ -309,19 +393,14 @@
     "b = calculs(3,4)\n",
     "print(a,b,c)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ae71230639ab4a4897a0a7d840b3da0aa7ae116a7420052ce92ef4319b712ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -334,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
