--- a/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
+++ b/cours/02_structures_conditionnelles/02_Structures_conditionnelles_slides.ipynb
@@ -129,24 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parapluie\n",
-      "impermeable\n",
-      "Bonne journée !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"pluie\" \n",
     "if meteo == \"pluie\" : # vérifie si la variable meteo possède \"pluie\" comme valeur ou non\n",
@@ -218,23 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parapluie\n",
-      "imperméable\n",
-      "Bonne journée!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"pluie\" \n",
     "if meteo == \"pluie\" : # vérifie si la variable weather possède \"raining\" comme valeur ou non\n",
@@ -280,22 +260,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bonne journée !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"froid\"  \n",
     "if meteo == \"pluie\" :  \n",
@@ -345,24 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t-shirt\n",
-      "shorts\n",
-      "Bonne journée !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"froid\" \n",
     "if meteo == \"pluie\": #  vérifie si la variable meteo possède \"pluie\" comme valeur ou non \n",
@@ -399,24 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "parapluie\n",
-      "impermeable\n",
-      "Bonne journée !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"pluie\" \n",
     "if meteo == \"pluie\" : \n",
@@ -477,24 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pull\n",
-      "echarpe\n",
-      "Bonne journée !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"froid\"\n",
     "if meteo == \"pluie\" : #  vérifie si meteo a \"pluie\" comme valeur ou non \n",
@@ -585,23 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_24660/3243762281.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Thelma\\AppData\\Local\\Temp/ipykernel_24660/3243762281.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    elif meteo == \"froid\" or meteo == \"venteux\" : # sinon vérifie si meteo vaut \"froid\" ou \"venteux\"\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "\n",
     "meteo = \"froid\" \n",
     "if meteo == \"froid\" : #  vérifie si meteo a \"froid\" comme valeur ou non \n",
     "    print(\"echarpe\") \n",
@@ -611,7 +541,14 @@
     "print(\"Bonne journée !\") \n",
     "else : # sinon affiche ce qui suit\n",
     "    print(\"t-shirt\")\n",
-    "print(\"Bonne journée !\") "
+    "print(\"Bonne journée !\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pb: print (bonne journée) car le elif ne suit donc pas immédiatement le if"
    ]
   },
   {
@@ -686,21 +623,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Go to Pizza Hut!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "envie = \"pizza\"\n",
     "if envie == \"tacos\":\n",
@@ -724,23 +653,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "manteau\n",
-      "echarpe\n",
-      "Bonne journée !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"froid\"\n",
     "if meteo == \"pluie\" :  \n",
@@ -768,25 +687,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t-shirt\n",
-      "shorts\n",
-      "manteau\n",
-      "echarpe\n",
-      "Bonne journée !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"froid\"\n",
     "if meteo == \"pluie\" : \n",
@@ -847,29 +754,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transaction impossible\n",
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "solde = 20.0\n",
     "prix_achat_hors_taxe = 19.0\n",
     "taxe = 1.08\n",
     "\n",
-    "if solde >= prix_achat_hors_taxe * taxe : # comparer le solde bancaire du client au prix d'achat taxe comprise\n",
+    "if solde >= (prix_achat_hors_taxe * taxe) : # comparer le solde bancaire du client au prix d'achat taxe comprise\n",
     "    print(\"Transcation possible\")\n",
     "else:\n",
     "    print(\"Transaction impossible\")\n",
@@ -966,23 +864,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "manteau\n",
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "meteo = \"froid\"  \n",
     "if meteo == \"froid\" or meteo ==\"venteux\" : # vérifie si meteo est froid ou bien venteux. \n",
@@ -1037,21 +926,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "if x != 0 and 2 // x == 2 :\n",
@@ -1061,22 +942,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test de l'évaluation paresseuse.\n",
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 1\n",
     "if 2 // x == 2 and x != 0:\n",
@@ -1097,22 +969,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test de l'évaluation paresseuse.\n",
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "if x == 0 or 2 // x == 2:\n",
@@ -1122,25 +985,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "integer division or modulo by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24660/453130627.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;33m//\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Test de l'évaluation paresseuse.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Fin\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0\n",
     "if 2 // x == 2 or x == 0:\n",
@@ -1161,23 +1012,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transaction approuvée\n",
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "solde = 20.0\n",
     "taxe = 1.08\n",
@@ -1256,23 +1098,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Transaction non approuvée : vendeur non autorisé\n",
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "solde = 20.0\n",
     "taxe = 1.08\n",
@@ -1327,23 +1160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num2 est plus grand que num1!\n",
-      "Fin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num1 = 1\n",
     "num2 = 2 \n",
@@ -1426,21 +1250,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Je suis un adolescent!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age = 17\n",
     "if age >= 18 : \n",
@@ -1462,21 +1278,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Votre candidature n'a pas été acceptée.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "acceptes = [\"Marie\", \"Leo\", \"Kenza\", \"Gabriel\"]\n",
     "liste_attente = [\"Lucie\", \"Dris\", \"Emma\"]\n",
@@ -1503,25 +1311,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'status_vote' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24660/2191853201.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mmon_age\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m18\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mstatus_vote\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstatus_vote\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'status_vote' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mon_age = 17\n",
     "if mon_age >= 18:\n",
@@ -1534,6 +1330,19 @@
    "metadata": {},
    "source": [
     "on n'a pas défini statut_vote donc ligne 3 pose problème"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "status_vote = \"vous pouvez voter\"\n",
+    "mon_age = 17\n",
+    "if mon_age >= 18:\n",
+    "    status_vote = True\n",
+    "print(status_vote)"
    ]
   },
   {
