--- a/cours/03_structures_iteratives/03_structures_iteratives.ipynb
+++ b/cours/03_structures_iteratives/03_structures_iteratives.ipynb
@@ -129,32 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range (1, 11):\n",
+    "    print(\"i =\", i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Afficher les valeurs dans l'intervalle:\n",
-      "i = 1\n",
-      "i = 2\n",
-      "i = 3\n",
-      "i = 4\n",
-      "i = 5\n",
-      "i = 6\n",
-      "i = 7\n",
-      "i = 8\n",
-      "i = 9\n",
-      "i = 10\n",
-      "Terminé\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Afficher les valeurs dans l'intervalle:\")\n",
     "for i in range(1, 11) :\n",
@@ -211,33 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Afficher les valeurs dans l intervalle:\n",
-      "i = 0\n",
-      "i = 1\n",
-      "i = 2\n",
-      "i = 3\n",
-      "i = 4\n",
-      "i = 5\n",
-      "i = 6\n",
-      "i = 7\n",
-      "i = 8\n",
-      "i = 9\n",
-      "i = 10\n",
-      "Terminé\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Afficher les valeurs dans l intervalle:')\n",
     "for i in range(11) :\n",
@@ -260,25 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Afficher les valeurs dans l intervalle:\n",
-      "i = 3\n",
-      "i = 5\n",
-      "i = 7\n",
-      "Terminé\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Afficher les valeurs dans l intervalle:')\n",
     "for i in range(3, 9, 2) :\n",
@@ -288,109 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Afficher les valeurs dans l intervalle:\n",
-      "i = 4\n",
-      "i = 3\n",
-      "i = 2\n",
-      "Terminé\n",
-      "Help on class range in module builtins:\n",
-      "\n",
-      "class range(object)\n",
-      " |  range(stop) -> range object\n",
-      " |  range(start, stop[, step]) -> range object\n",
-      " |  \n",
-      " |  Return an object that produces a sequence of integers from start (inclusive)\n",
-      " |  to stop (exclusive) by step.  range(i, j) produces i, i+1, i+2, ..., j-1.\n",
-      " |  start defaults to 0, and stop is omitted!  range(4) produces 0, 1, 2, 3.\n",
-      " |  These are exactly the valid indices for a list of 4 elements.\n",
-      " |  When step is given, it specifies the increment (or decrement).\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __bool__(self, /)\n",
-      " |      self != 0\n",
-      " |  \n",
-      " |  __contains__(self, key, /)\n",
-      " |      Return key in self.\n",
-      " |  \n",
-      " |  __eq__(self, value, /)\n",
-      " |      Return self==value.\n",
-      " |  \n",
-      " |  __ge__(self, value, /)\n",
-      " |      Return self>=value.\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __getitem__(self, key, /)\n",
-      " |      Return self[key].\n",
-      " |  \n",
-      " |  __gt__(self, value, /)\n",
-      " |      Return self>value.\n",
-      " |  \n",
-      " |  __hash__(self, /)\n",
-      " |      Return hash(self).\n",
-      " |  \n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
-      " |  \n",
-      " |  __le__(self, value, /)\n",
-      " |      Return self<=value.\n",
-      " |  \n",
-      " |  __len__(self, /)\n",
-      " |      Return len(self).\n",
-      " |  \n",
-      " |  __lt__(self, value, /)\n",
-      " |      Return self<value.\n",
-      " |  \n",
-      " |  __ne__(self, value, /)\n",
-      " |      Return self!=value.\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Helper for pickle.\n",
-      " |  \n",
-      " |  __repr__(self, /)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  __reversed__(...)\n",
-      " |      Return a reverse iterator.\n",
-      " |  \n",
-      " |  count(...)\n",
-      " |      rangeobject.count(value) -> integer -- return number of occurrences of value\n",
-      " |  \n",
-      " |  index(...)\n",
-      " |      rangeobject.index(value) -> integer -- return index of value.\n",
-      " |      Raise ValueError if the value is not present.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  start\n",
-      " |  \n",
-      " |  step\n",
-      " |  \n",
-      " |  stop\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Afficher les valeurs dans l intervalle:')\n",
     "for i in range(4, 1, -1) :\n",
@@ -412,30 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Avant addition i = 1\n",
-      "Après addition i = 2\n",
-      "Avant addition i = 4\n",
-      "Après addition i = 5\n",
-      "Avant addition i = 7\n",
-      "Après addition i = 8\n",
-      "Avant addition i = 10\n",
-      "Après addition i = 11\n",
-      "Dernière valeur, i = 11\n",
-      "Terminé\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1, 11, 3) :\n",
     "    print(\"Avant addition i =\", i)\n",
@@ -473,21 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La somme vaut : 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(input(\"Entrez un nombre :\"))\n",
     "result = 0\n",
@@ -511,21 +349,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "La moyenne de [23, 43, 56, 22, 109, 34] vaut 47.833333333333336\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "liste_de_nombres = [23, 43, 56, 22, 109, 34]\n",
     "sum = 0\n",
@@ -533,6 +363,16 @@
     "for nb in liste_de_nombres :\n",
     "    sum += nb\n",
     "print(\"La moyenne de\", liste_de_nombres, \"vaut\", sum / len(liste_de_nombres))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste_de_nombres = [23, 43, 56, 22, 109, 34]\n",
+    "len(liste_de_nombres)"
    ]
   },
   {
@@ -601,30 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i = 1\n",
-      "i = 2\n",
-      "i = 3\n",
-      "i = 4\n",
-      "i = 5\n",
-      "i = 6\n",
-      "i = 7\n",
-      "i = 8\n",
-      "i = 9\n",
-      "Terminé\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 1\n",
     "while i < 10 : \n",
@@ -695,6 +518,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = 0\n",
+    "i = 1\n",
+    "while i < 10:\n",
+    "    sum = sum + i\n",
+    "    i += 1\n",
+    "print (sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -745,21 +587,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range (1, 6) :\n",
     "    print('Programmer c est cool!')"
@@ -767,21 +597,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n",
-      "Programmer c est cool!\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "print(\"Programmer c'est cool\\n\" * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "i =  0 \n",
     "while (i < 5) :\n",
@@ -908,6 +735,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, 21) :\n",
+    "    if i % 2 == 0 :\n",
+    "        print(\"résultat?\")\n",
+    "    print(i, \"est impair\")\n",
+    "print(\"Terminé\") "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1003,35 +843,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 \n",
+      "0 1 \n",
+      "0 1 2 \n",
+      "0 1 2 3 \n",
+      "0 1 2 3 4 \n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 6):\n",
-    "    j = 0\n",
+    "    j = 0 \n",
     "    while j < i:\n",
     "        print(j, end = \" \")\n",
     "        j += 1\n",
-    "    print(\"\")"
+    "    print(\"\")\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
