--- a/exercises/TD04_listes/04_listes.ipynb
+++ b/exercises/TD04_listes/04_listes.ipynb
@@ -25,7 +25,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste = [3, 5, 10]\n",
+    "print(liste)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,7 +42,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste = [3, 5, 10]\n",
+    "liste.extend([12, 17])\n",
+    "print(liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste = [3, 5, 10]\n",
+    "liste += [12, 17]\n",
+    "print(liste)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,7 +71,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste = [3, 5, 10]\n",
+    "p = liste.index(10)\n",
+    "liste[p] = -7\n",
+    "print(liste)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,7 +90,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste = [3, 5, -7, 12, 17]\n",
+    "for i in range (len(liste)):\n",
+    "    liste[i]*= 2\n",
+    "print(liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste = [3, 5, -7, 12, 17]\n",
+    "liste = [liste[i]*2 for i in range(len(liste))]\n",
+    "print(liste)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,7 +120,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l = [6, 10, -14, 24, 34]\n",
+    "for i in range(len(l)):\n",
+    "   l[i] += i\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [6, 10, -14, 24, 34]\n",
+    "l = [l[i] + i for i in range(len(l))]\n",
+    "print(l)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +150,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "liste = []\n",
+    "for i in range (10):\n",
+    "    n = random.randint(10, 99)\n",
+    "    liste.append(n)\n",
+    "print(liste)\n",
+    "print(sum(liste), max(liste))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,7 +172,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste_pair = []\n",
+    "liste_impair = []\n",
+    "for i in liste:\n",
+    "    if i % 2 == 0:\n",
+    "        liste_pair.append(i)\n",
+    "    else:\n",
+    "        liste_impair.append(i)\n",
+    "print(liste_pair)\n",
+    "print(liste_impair)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,7 +196,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste.sort()\n",
+    "print(liste)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +213,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste.sort()\n",
+    "del liste[0]\n",
+    "del liste[-1]\n",
+    "print(liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste.sort()\n",
+    "n = liste[1:len(liste)-1]\n",
+    "print(n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,7 +243,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste = []\n",
+    "for i in range(1, 53):\n",
+    "    liste.append(i)\n",
+    "print(liste)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,7 +262,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste3 = []\n",
+    "liste4 = []\n",
+    "import random\n",
+    "indice = random.randint(0,51)\n",
+    "\n",
+    "for i in range(0, 52):\n",
+    "    if i < indice:\n",
+    "        liste3.append(i)\n",
+    "    else:\n",
+    "        liste4.append(i)\n",
+    "liste3, liste4 = liste4, liste3\n",
+    "print(liste3, liste4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = list((range(1, 53)))\n",
+    "i = random.randint(0, 52)\n",
+    "c[:i]\n",
+    "c[i:]\n",
+    "print(c[i:] + c[:i])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,10 +314,34 @@
    "outputs": [],
    "source": [
     "def syracuse(n):\n",
-    "    \"\"\" Retourne la liste des valeurs de la suite en partant de n jusqu'à 1 \"\"\"\n",
-    "    pass\n",
-    "\n",
-    "print(syracuse(3))"
+    "    liste5 = []\n",
+    "    while n !=1:\n",
+    "        liste5.append(n)\n",
+    "        if n == 1:\n",
+    "            break\n",
+    "        elif n % 2 == 0:\n",
+    "            n //= 2\n",
+    "        else:\n",
+    "            n = n*3 + 1\n",
+    "    return liste5\n",
+    "syracuse(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#meme fonction mais plus court\n",
+    "def syracuse(n):\n",
+    "    liste = []\n",
+    "    while n !=1:\n",
+    "        liste.append(n)\n",
+    "        if n == 1:\n",
+    "            break\n",
+    "        n = n//2 if n/2 == 0 else n*3 + 1\n",
+    "    return liste"
    ]
   },
   {
@@ -214,9 +361,24 @@
    },
    "outputs": [],
    "source": [
+    "def syracuse(n):\n",
+    "    \"\"\" Retourne la liste des valeurs de la suite en partant de n jusqu'à 1 \"\"\"\n",
+    "    liste5 = []\n",
+    "    while n != 1:\n",
+    "        if n % 2 == 0:\n",
+    "            n /= 2\n",
+    "            liste5.append(n)\n",
+    "        elif n % 2 == 1:\n",
+    "            n = n*3 + 1\n",
+    "            liste5.append(n)\n",
+    "    return liste5\n",
+    "\n",
+    "\n",
     "def testeConjecture(n_max):\n",
     "    \"\"\" Teste la conjecture de Collatz pour toutes les valeurs de 2 à n_max \"\"\"\n",
-    "    pass\n",
+    "    for n in range (1, n_max + 1):\n",
+    "        if 1.0 in syracuse(n):\n",
+    "            print(True, n)\n",
     "\n",
     "print(testeConjecture(10000))"
    ]
@@ -236,9 +398,20 @@
    "source": [
     "def tempsVol(n):\n",
     "    \"\"\" Retourne le temps de vol de n \"\"\"\n",
-    "    pass\n",
+    "    cpt = 0\n",
+    "    while True:\n",
+    "        if n == 1:\n",
+    "            break\n",
+    "        cpt += 1\n",
+    "        if n % 2 == 0:\n",
+    "            n //= 2\n",
+    "        else:\n",
+    "            n = n*3 + 1\n",
+    "    return cpt\n",
     "\n",
-    "print(\"Le temps de vol de\", 3, \"est\", tempsVol(3))"
+    "print(\"Le temps de vol de\", 3, \"est\", tempsVol(3))\n",
+    "\n",
+    "#len(syracuse(n)) même chose"
    ]
   },
   {
@@ -256,8 +429,21 @@
    "source": [
     "def tempsVolListe(n_max):\n",
     "    \"\"\" Retourne la liste de tous les temps de vol de 1 à n_max \"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    liste = []\n",
+    "    for i in range(1, n_max+1):\n",
+    "        liste.append(tempsVol(i))\n",
+    "    return liste\n",
+    "print(tempsVolListe(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tempsVolListe(n_max):\n",
+    "    return[tempsVol(n) for n in range (1, n_max+1)]\n",
     "print(tempsVolListe(100))"
    ]
   },
@@ -269,10 +455,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(max(tempsVolListe(10000)))\n",
+    "print(tempsVolListe.index(261))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "7. L’altitude maximale de l'entier `n` est la plus grande valeur par laquelle passe `n` au cours de son vol. Déterminer quel entier entre 1 et 10000 a la plus grande altitude maximale (réponse 27114424, atteint par l'entier 9663). Ne pas hésiter à écrire de nouvelles fonctions pour cela."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def altmax(n):\n",
+    "    altmax = 0\n",
+    "    while True:\n",
+    "        if n > altmax:\n",
+    "            altmax = n\n",
+    "        if n == 1:\n",
+    "            break\n",
+    "        elif n % 2 == 0:\n",
+    "            n //= 2\n",
+    "        else:\n",
+    "            n = n*3 + 1\n",
+    "    return altmax"
    ]
   },
   {
@@ -297,10 +513,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "carre_mag = [[4, 14, 15, 1], [9, 7, 6, 12], [5, 11, 10, 8], [16, 2, 3, 13]]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3. Créer une deuxième liste affectée à la variable `carre_pas_mag` qui ne soit pas magique à partir du carré magique en changeant le 3 en 7. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "carre_pas_mag = [list(l) for l in carre_mag]\n",
+    "carre_pas_mag[3][2] = 7"
    ]
   },
   {
@@ -311,14 +546,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La constante magique est 34"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def afficheCarre(carre):\n",
-    "    \"\"\" Affiche la liste à 2 dimensions carre comme un carré\"\"\"\n",
-    "    pass\n",
+    "    for i in range (4):\n",
+    "        print(carre[i])\n",
+    "        i += 1\n",
     "\n",
     "afficheCarre(carre_mag)\n",
     "afficheCarre(carre_pas_mag)\n"
@@ -338,11 +581,14 @@
    "outputs": [],
    "source": [
     "def testLignesEgales(carre):\n",
-    "    \"\"\" Renvoie la somme des éléments d'une ligne de la liste 2D carre si toutes les lignes ont la même somme, et -1 sinon \"\"\"\n",
-    "    pass\n",
+    "    n = sum(carre[0])\n",
+    "    for i in range (1, 4):\n",
+    "        if sum(carre[i]) != n:\n",
+    "            return -1\n",
+    "    return n\n",
     "\n",
     "print(testLignesEgales(carre_mag))\n",
-    "print(testLignesEgales(carre_pas_mag))\n"
+    "print(testLignesEgales(carre_pas_mag))"
    ]
   },
   {
@@ -359,8 +605,11 @@
    "outputs": [],
    "source": [
     "def testColonnesEgales(carre):\n",
-    "    \"\"\" Renvoie la somme des éléments d'une colonne de la liste 2D carre si toutes les colonnes ont la même somme, et -1 sinon \"\"\"\n",
-    "    pass\n",
+    "    n = sum([l[0]for l in carre])   #somme pour colonne\n",
+    "    for i in range (1, 4):\n",
+    "        if sum([l[i] for l in carre]) != n:\n",
+    "            return -1\n",
+    "    return n\n",
     "\n",
     "print(testColonnesEgales(carre_mag))\n",
     "print(testColonnesEgales(carre_pas_mag))"
@@ -380,8 +629,20 @@
    "outputs": [],
    "source": [
     "def testDiagonalesEgales(carre):\n",
-    "    \"\"\" Renvoie la somme des éléments d'une diagonale de la liste 2D carre si les 2 diagonales ont la même somme, et -1 sinon \"\"\"\n",
-    "    pass\n",
+    "    n = len(carre)\n",
+    "    d = [carre[i][i] for i in range(n)]\n",
+    "    antidiag = [carre[i][n-1-i] for i in range(n)]\n",
+    "    if sum(d) == sum(antidiag):\n",
+    "        return sum(d)\n",
+    "    else:\n",
+    "        return -1\n",
+    "\n",
+    "#def testdiagonales(carre):\n",
+    "    a = len(carre)\n",
+    "    n = sum(carre[i][i] for i in range(4))\n",
+    "    if sum(carre[i][a-1-i] for i in range(4)) != n:\n",
+    "        return -1\n",
+    "    return n\n",
     "\n",
     "print(testDiagonalesEgales(carre_mag))\n",
     "print(testDiagonalesEgales(carre_pas_mag))"
@@ -401,9 +662,9 @@
    "outputs": [],
    "source": [
     "def estCarreMagique(carre):\n",
-    "    \"\"\" Renvoie True si c'est un carre magique et False sinon\"\"\"\n",
-    "    pass\n",
-    "\n",
+    "    l = testLignesEgales(carre)\n",
+    "    return l != -1 and l == testColonnesEgales and l == testDiagonalesEgales\n",
+    "    \n",
     "print(estCarreMagique(carre_mag))\n",
     "print(estCarreMagique(carre_pas_mag))"
    ]
@@ -422,19 +683,203 @@
    "outputs": [],
    "source": [
     "def estNormal(carre):\n",
-    "    \"\"\" Retourne True si contient toutes les valeurs de 1 à n^2 où n est la taille \n",
-    "        du carré, et False sinon \"\"\"\n",
-    "    pass\n",
+    "    n = len(carre)\n",
+    "    n_carre = [i for i in range(1, n**2 + 1)] #list(range(...))\n",
+    "    for col in range(n):\n",
+    "        for line in range(n):\n",
+    "            if carre[line][col] in n_carre:\n",
+    "                n_carre.remove(carre[line][col])\n",
+    "    return not(n_carre)\n",
     "\n",
     "print(estNormal(carre_mag))\n",
     "print(estNormal(carre_pas_mag))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sujet 9\n",
+    "def longueur(a,b):\n",
+    "    liste = []\n",
+    "    if len(a) != len(b):\n",
+    "        return \"les listes ne sont pas de même longuer on ne peut pas les sommer\"\n",
+    "    else:\n",
+    "        liste = [a[i] + b[i] for i in range(len(a))]\n",
+    "        return liste\n",
+    "\n",
+    "print(longueur([1,7],[8,9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def plan_jour(n):\n",
+    "    j = []\n",
+    "    for i in range(random.randint(0,n)):\n",
+    "        j.append(random.randint(1,n))\n",
+    "    print(j)\n",
+    "\n",
+    "def plan_semaine(n):\n",
+    "    s = []\n",
+    "    for i in range(7):\n",
+    "        s.append(plan_jour(n))\n",
+    "\n",
+    "def affiche(n):\n",
+    "    return plan_semaine(n)\n",
+    "\n",
+    "print(affiche(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pas fini\n",
+    "def somme(n):\n",
+    "    l = []\n",
+    "    for i in range(n):\n",
+    "        l.append(2**i + for i in range)\n",
+    "    return l\n",
+    "   # l = [2**i for i in range(n)]\n",
+    "somme(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pas fini\n",
+    "def matrice_carre():\n",
+    "    l = []\n",
+    "    carre = int(input(\"Quelle est la taille de la matrice\"))\n",
+    "    for i in range(carre):\n",
+    "        for j in range(carre):\n",
+    "            ligne = int(input(\"Quels sont les chiffres de cette ligne\"))\n",
+    "            if ligne == int(ligne):\n",
+    "                l.append(ligne)\n",
+    "    for i in l:\n",
+    "        print(' '.join([str(j) for j in i]))\n",
+    "matrice_carre()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 4]"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sujet 26\n",
+    "def pair():\n",
+    "    l = []\n",
+    "    for i in range(10):\n",
+    "        a = int(input(\"Donner un entier pair\"))\n",
+    "        if a == int(a) and a % 2 == 0:\n",
+    "            l.append(a)\n",
+    "        else:\n",
+    "            break\n",
+    "    return l\n",
+    "pair()\n",
+    "\n",
+    "#morpion\n",
+    "def verifie_ligne(morpion,n):\n",
+    "    for i in range(3):\n",
+    "        if l :\n",
+    "        return 0\n",
+    "    elif :\n",
+    "        return 1\n",
+    "    else: \n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sujet 20\n",
+    "def divise(l1,l2):\n",
+    "    l = []\n",
+    "    l = tuple([l1[i]//l2[i] for i in range(len(l1))])\n",
+    "    return l\n",
+    "print(divise([10,6,8], [5,2,4]))\n",
+    "\n",
+    "def time_func(func):\n",
+    "    import time\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 'f'], [2, 's'], [2, 'e']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sujet 6\n",
+    "def sup(l1,n):\n",
+    "    compteur = 0\n",
+    "    for i in range(len(l1)):\n",
+    "        if l1[i] > n:\n",
+    "            compteur += 1\n",
+    "    return compteur\n",
+    "sup([4,7,10,45,68], 40)\n",
+    "\n",
+    "def occurence(c):\n",
+    "    l = []\n",
+    "    for i in c:\n",
+    "        l.append([c.count(i), i])\n",
+    "    for i in l:\n",
+    "        if l.count(i) >= 2:\n",
+    "            l.remove(i)\n",
+    "    return l\n",
+    "print(occurence(\"fesse\"))"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ae71230639ab4a4897a0a7d840b3da0aa7ae116a7420052ce92ef4319b712ad0"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit ('l1-python': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -447,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
